[gd_scene load_steps=8 format=2]

[ext_resource path="res://player-model.obj" type="ArrayMesh" id=1]
[ext_resource path="res://barak.webp" type="Texture" id=2]
[ext_resource path="res://vehicle.gd" type="Script" id=3]
[ext_resource path="res://red-dot-dot-dots-icon-with-and-vector-format-for-free-balloon-sphere-texture-light-transparent-png-2204440.png" type="Texture" id=4]
[ext_resource path="res://ball_cam_trans.gd" type="Script" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 5, 5, 5 )
uv1_triplanar = true

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -0.287237, 0.284282, -0.362123, -0.343649, 0.0274555, -0.34971, -0.364051, 0.0165086, -0.34971, -0.386232, 0.00981883, -0.34971, -0.409235, 0.00750781, -0.34971, -0.432375, 0.00981883, -0.34971, -0.45442, 0.0165086, -0.34971, -0.474958, 0.0274555, -0.34971, -0.492758, 0.0421122, -0.34971, -0.507546, 0.060053, -0.34971, -0.5185, 0.0804872, -0.34971, -0.525209, 0.102624, -0.34971, -0.5274, 0.125674, -0.34971, -0.525209, 0.148723, -0.34971, -0.295589, 0.28933, -0.361626, 0.537997, 0.261659, -0.31857, 0.554702, 0.109679, -0.318144, 0.552785, 0.0896096, -0.318144, 0.546897, 0.0702701, -0.318144, 0.537449, 0.0525118, -0.318144, 0.524579, 0.036882, -0.318144, 0.508969, 0.0240498, -0.318144, 0.491169, 0.0145625, -0.318144, 0.471863, 0.00872414, -0.318144, -0.409235, -0.00404726, -0.34439, -0.434566, -0.00155379, -0.34439, 0.451736, 0.00671721, -0.318144, 0.451736, -0.00331746, -0.313534, -0.458938, 0.00586578, -0.34439, -0.481394, 0.0178466, -0.34439, -0.500974, 0.0339628, -0.34439, -0.517131, 0.0536065, -0.34439, -0.529043, 0.0760476, -0.34439, -0.536437, 0.100374, -0.34439, -0.539038, 0.125674, -0.34439, -0.663227, 0.602472, -0.296935, -0.5185, 0.170921, -0.34971, -0.507546, 0.191355, -0.34971, -0.309282, 0.297114, -0.360279, -0.657203, 0.60381, -0.29651, 0.530055, 0.265004, -0.318286, 0.547992, 0.258983, -0.318002, 0.564834, 0.109679, -0.313534, 0.562643, 0.0876635, -0.313534, 0.556208, 0.0664387, -0.313534, 0.545802, 0.0469167, -0.313534, 0.531699, 0.0297665, -0.313534, 0.514583, 0.015718, -0.313534, 0.495003, 0.00525762, -0.313534, 0.47378, -0.0011889, -0.313534, -0.409235, -0.0136562, -0.330983, -0.436483, -0.0109803, -0.330983, 0.451736, -0.0117101, -0.301901, -0.462635, -0.00301338, -0.330983, -0.486734, 0.00981883, -0.330983, -0.50782, 0.0271514, -0.330983, -0.525072, 0.0482546, -0.330983, -0.537943, 0.0723379, -0.330983, -0.545884, 0.0984888, -0.330983, -0.663227, 0.596573, -0.296793, -0.492758, 0.209235, -0.34971, -0.663638, 0.596634, -0.27296, -0.663638, 0.602533, -0.27296, -0.663638, 0.602594, -0.267782, -0.65775, 0.603932, -0.267782, -0.331326, 0.309278, -0.357441, -0.358985, 0.323448, -0.353469, -0.0813051, 0.561422, -0.0119956, -0.081442, 0.560935, -0.0311476, -0.0819897, 0.559597, -0.0403689, -0.5986, 0.592499, -0.294382, 0.519102, 0.268835, -0.317435, 0.538545, 0.278383, -0.293105, 0.549635, 0.274187, -0.294311, 0.562917, 0.267923, -0.295587, 0.558946, 0.263057, -0.303674, 0.555797, 0.258861, -0.3102, 0.718461, 0.176334, -0.189613, 0.717503, 0.165022, -0.191883, 0.716544, 0.153771, -0.189613, 0.552785, 0.0422338, -0.301901, 0.537586, 0.0238674, -0.301901, 0.519239, 0.00872414, -0.301901, 0.498289, -0.00246604, -0.301901, 0.475423, -0.00939908, -0.301901, -0.409235, -0.0170011, -0.310838, -0.437168, -0.0142644, -0.310838, 0.451736, -0.0146293, -0.284309, -0.463868, -0.00611501, -0.310838, -0.488514, 0.00702129, -0.310838, -0.510147, 0.0247796, -0.310838, -0.527947, 0.0464302, -0.310838, -0.541092, 0.0710607, -0.310838, -0.54917, 0.0978198, -0.310838, -0.549581, 0.097759, -0.28594, -0.663638, 0.596634, 0.273299, -0.558755, 0.129201, -0.0900933, -0.663638, 0.602594, 0.268121, -0.65775, 0.603932, 0.268121, -0.0813051, 0.561422, 0.011909, 0.232522, 0.438451, -7.83801e-06, 0.232248, 0.438208, -0.0235577, 0.230057, 0.437721, -0.0478879, 0.226224, 0.436931, -0.0773962, 0.553059, 0.283552, -0.258773, 0.545665, 0.282275, -0.27601, 0.522114, 0.283857, -0.291473, -0.556154, 0.582646, -0.290338, 0.557029, 0.277836, -0.277145, 0.570585, 0.271024, -0.27828, 0.719831, 0.192267, -0.173653, 0.719283, 0.185882, -0.183229, 0.734755, 0.102868, -0.0526404, 0.734344, 0.0982455, -0.0557615, 0.733797, 0.0927721, -0.0568255, 0.733386, 0.0872986, -0.0557615, 0.715723, 0.144223, -0.183229, 0.689297, 0.0725811, -0.115204, 0.732701, 0.079575, -0.0479588, 0.725444, 0.0757436, -0.049874, 0.520882, 0.00629149, -0.284309, 0.499385, -0.00520277, -0.284309, 0.475971, -0.0122574, -0.284309, -0.409235, -0.017366, -0.28594, 0.451736, -0.0149942, -0.262603, -0.437168, -0.0146293, -0.28594, -0.464004, -0.0064799, -0.28594, -0.488788, 0.00671721, -0.28594, -0.510421, 0.0245363, -0.28594, -0.528221, 0.0461869, -0.28594, -0.541503, 0.0709391, -0.28594, -0.549581, 0.097759, 0.283726, -0.663227, 0.596573, 0.297132, -0.663227, 0.602472, 0.297274, -0.663638, 0.602533, 0.273299, -0.558755, 0.129201, 0.0900776, -0.657203, 0.60381, 0.296849, -0.081442, 0.560935, 0.031061, 0.232248, 0.438208, 0.0234711, 0.249227, 0.431153, -7.83801e-06, 0.248268, 0.431032, -0.0236996, 0.564697, 0.278809, -0.259482, 0.578526, 0.271572, -0.26005, 0.715175, 0.195551, -0.174788, 0.720104, 0.194518, -0.162304, 0.735166, 0.107064, -0.0424969, 0.735029, 0.105969, -0.0479588, 0.712574, 0.200538, -0.165425, 0.732975, 0.0826766, -0.0526404, 0.732701, 0.079575, 0.0479432, 0.732564, 0.0785411, -0.0424969, 0.725307, 0.074284, -0.0424969, 0.499522, -0.00550685, -0.262603, 0.681629, 0.0579852, -0.0665434, 0.476108, -0.0125615, -0.262603, -0.409235, -0.017366, 0.283726, 0.451736, -0.0149942, 0.262162, -0.437168, -0.0146293, 0.283726, -0.464004, -0.0064799, 0.283726, -0.488788, 0.00671721, 0.283726, -0.510421, 0.0245363, 0.283726, -0.528221, 0.0461869, 0.283726, -0.541503, 0.0709391, 0.283726, -0.54917, 0.0978198, 0.308553, -0.545884, 0.0984888, 0.328769, -0.536437, 0.100374, 0.342175, -0.539038, 0.125674, 0.342175, -0.5274, 0.125674, 0.347424, -0.525209, 0.148723, 0.347424, -0.5185, 0.170921, 0.347424, -0.507546, 0.191355, 0.347424, -0.358985, 0.323448, 0.353808, -0.331326, 0.309278, 0.35778, -0.309282, 0.297114, 0.360618, -0.5986, 0.592499, 0.294721, -0.0819897, 0.559597, 0.0403533, -0.295589, 0.28933, 0.361965, 0.530055, 0.265004, 0.318625, 0.553059, 0.283552, 0.259112, 0.226224, 0.436931, 0.0773096, 0.230057, 0.437721, 0.0478013, 0.248268, 0.431032, 0.023613, 0.564697, 0.278809, 0.259821, 0.571132, 0.276559, 0.244003, 0.571132, 0.276559, -0.243664, 0.585235, 0.268774, -0.243522, 0.712574, 0.201147, -0.162304, 0.720104, 0.194518, 0.162217, 0.726266, 0.178705, -0.0645573, 0.735166, 0.107064, 0.0424104, 0.725444, 0.0757436, 0.0497874, 0.725307, 0.074284, 0.0424104, 0.732564, 0.0785411, 0.0424104, 0.732975, 0.0826766, 0.0525538, 0.689297, 0.0725811, 0.115117, 0.537586, 0.0238674, 0.301388, 0.519239, 0.00872414, 0.301388, 0.499522, -0.00550685, 0.262162, 0.681629, 0.0579852, 0.0665277, 0.476108, -0.0125615, 0.262162, -0.409235, -0.0170011, 0.308553, 0.475971, -0.0122574, 0.283797, 0.451736, -0.0146293, 0.283797, -0.437168, -0.0142644, 0.308553, -0.463868, -0.00611501, 0.308553, -0.488514, 0.00702129, 0.308553, -0.510147, 0.0247796, 0.308553, -0.527947, 0.0464302, 0.308553, -0.541092, 0.0710607, 0.308553, -0.537943, 0.0723379, 0.328769, -0.529043, 0.0760476, 0.342175, -0.5185, 0.0804872, 0.347424, -0.525209, 0.102624, 0.347424, -0.287237, 0.284282, 0.362533, -0.556154, 0.582646, 0.290677, 0.519102, 0.268835, 0.317774, 0.538545, 0.278383, 0.293444, 0.522114, 0.283857, 0.291812, 0.545665, 0.282275, 0.276349, 0.537997, 0.261659, 0.318909, 0.547992, 0.258983, 0.318341, 0.549635, 0.274187, 0.29465, 0.557029, 0.277836, 0.277484, 0.570585, 0.271024, 0.278619, 0.578526, 0.271572, 0.260389, 0.585235, 0.268774, 0.243861, 0.712574, 0.201147, 0.162217, 0.719831, 0.192267, 0.173566, 0.726266, 0.178705, 0.0645416, 0.712574, 0.200538, 0.165409, 0.735029, 0.105969, 0.0479432, 0.734755, 0.102868, 0.0525538, 0.734344, 0.0982455, 0.0556749, 0.733386, 0.0872986, 0.0556749, 0.520882, 0.00629149, 0.283797, 0.499385, -0.00520277, 0.283797, 0.715723, 0.144223, 0.183142, 0.552785, 0.0422338, 0.301388, 0.531699, 0.0297665, 0.313092, 0.514583, 0.015718, 0.313092, 0.495003, 0.00525762, 0.313092, 0.498289, -0.00246604, 0.301388, -0.409235, -0.0136562, 0.328769, 0.475423, -0.00939908, 0.301388, 0.451736, -0.0117101, 0.301388, -0.436483, -0.0109803, 0.328769, -0.462635, -0.00301338, 0.328769, -0.486734, 0.00981883, 0.328769, -0.50782, 0.0271514, 0.328769, -0.525072, 0.0482546, 0.328769, -0.517131, 0.0536065, 0.342175, -0.507546, 0.060053, 0.347424, -0.492758, 0.0421122, 0.347424, -0.474958, 0.0274555, 0.347424, -0.45442, 0.0165086, 0.347424, -0.432375, 0.00981883, 0.347424, -0.409235, 0.00750781, 0.347424, -0.386232, 0.00981883, 0.347424, -0.364051, 0.0165086, 0.347424, 0.491169, 0.0145625, 0.317703, 0.508969, 0.0240498, 0.317703, 0.524579, 0.036882, 0.317703, 0.537449, 0.0525118, 0.317703, 0.546897, 0.0702701, 0.317703, 0.552785, 0.0896096, 0.317703, 0.554702, 0.109679, 0.317703, 0.564834, 0.109679, 0.313092, 0.717503, 0.165022, 0.191796, 0.718461, 0.176334, 0.189597, 0.555797, 0.258861, 0.310539, 0.558946, 0.263057, 0.304013, 0.562917, 0.267923, 0.295926, 0.715175, 0.195551, 0.174701, 0.719283, 0.185882, 0.183142, 0.733797, 0.0927721, 0.0567389, 0.716544, 0.153771, 0.189597, 0.545802, 0.0469167, 0.313092, 0.47378, -0.0011889, 0.313092, -0.409235, -0.00404726, 0.342175, 0.451736, -0.00331746, 0.313092, -0.434566, -0.00155379, 0.342175, -0.458938, 0.00586578, 0.342175, -0.481394, 0.0178466, 0.342175, -0.500974, 0.0339628, 0.342175, 0.451736, 0.00671721, 0.317703, 0.471863, 0.00872414, 0.317703, 0.556208, 0.0664387, 0.313092, 0.562643, 0.0876635, 0.313092 )

[node name="player_base" type="Spatial"]

[node name="vehicle" type="VehicleBody" parent="."]
script = ExtResource( 3 )

[node name="player-model" type="MeshInstance" parent="vehicle"]
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 1 )
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null

[node name="ball_cam_trans" type="Spatial" parent="vehicle/player-model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0631585, 0.337171, 0 )
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="vehicle/player-model/ball_cam_trans"]
transform = Transform( -4.16989e-08, 0.29994, -0.953958, 1.31108e-08, 0.953958, 0.29994, 1, 1.59872e-14, -4.37115e-08, -4.60699, 2.23013, 0 )
fov = 70.3125
far = 8192.0

[node name="CollisionShape" type="CollisionShape" parent="vehicle"]
shape = SubResource( 2 )

[node name="front_left_wheel" type="VehicleWheel" parent="vehicle"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.455356, 0.0840083, -0.270099 )
use_as_steering = true
wheel_roll_influence = 0.0
wheel_radius = 0.13
wheel_friction_slip = 14.0
suspension_stiffness = 200.0
damping_compression = 0.8
damping_relaxation = 5.0

[node name="front_right_wheel" type="VehicleWheel" parent="vehicle"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.454856, 0.0838836, 0.27 )
use_as_steering = true
wheel_roll_influence = 0.0
wheel_radius = 0.13
wheel_friction_slip = 14.0
suspension_stiffness = 200.0
damping_compression = 0.8
damping_relaxation = 5.0

[node name="back_left_wheel" type="VehicleWheel" parent="vehicle"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.402, 0.093115, -0.3 )
use_as_traction = true
wheel_roll_influence = 0.0
wheel_radius = 0.17
wheel_friction_slip = 14.0
suspension_stiffness = 200.0
damping_compression = 0.8
damping_relaxation = 5.0

[node name="back_right_wheel" type="VehicleWheel" parent="vehicle"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.402014, 0.093343, 0.3 )
use_as_traction = true
wheel_roll_influence = 0.0
wheel_radius = 0.17
wheel_friction_slip = 14.0
suspension_stiffness = 200.0
damping_compression = 0.8
damping_relaxation = 5.0

[node name="Label" type="Label" parent="vehicle"]
margin_left = 12.0
margin_top = 526.0
margin_right = 161.0
margin_bottom = 573.0
text = "big black balls cam"

[node name="TextureRect" type="TextureRect" parent="vehicle"]
margin_left = 123.0
margin_top = 518.0
margin_right = 173.0
margin_bottom = 546.6
texture = ExtResource( 4 )
expand = true

[node name="Timer" type="Timer" parent="vehicle/TextureRect"]
wait_time = 0.7
autostart = true

[connection signal="timeout" from="vehicle/TextureRect/Timer" to="vehicle" method="_on_Timer_timeout"]
